@@ -4,7 +4,9 @@ import workflow.factory.StepFactory;
 import workflow.iterator.DepthFirstIterator;
 import workflow.iterator.LinearIterator;
 import workflow.model.Step;
-import workflow.visitor.*;
+import workflow.visitor.CostVisitor;
+import workflow.visitor.PrettyPrintVisitor;
+import workflow.visitor.ValidationVisitor;
 
 import java.io.IOException;
 import java.nio.file.Files;
@@ -14,74 +16,96 @@ import java.util.*;
 public class Main {
 
     public static void main(String[] args) throws Exception {
-
-        List<String> workflowFiles = List.of(
+        String[] workflowFiles = {
                 "src/main/resources/workflows/workflow1.json",
                 "src/main/resources/workflows/workflow2.json",
                 "src/main/resources/workflows/workflow3.json",
                 "src/main/resources/workflows/workflow4.json"
-        );
+        };
 
         for (String file : workflowFiles) {
-            System.out.println("\n==============================");
+            System.out.println("==============================");
             System.out.println("Loading workflow: " + file);
             System.out.println("==============================");
 
             Map<String, Object> config = loadJsonAsMap(file);
+            Step root = new StepFactory().create(config);
 
-            StepFactory factory = new StepFactory();
-            Step root = factory.create(config);
+            runPrettyPrint(root);
+            runCostVisitor(root);
+            runValidationVisitor(root);
+            runDFS(root);
+            runLinear(root);
 
-            runAllFeatures(root);
+            System.out.println();
         }
     }
 
-    private static void runAllFeatures(Step root) {
-
+    // ------------------------------------------------------------
+    // Pretty Print
+    // ------------------------------------------------------------
+    private static void runPrettyPrint(Step root) {
         System.out.println("\n--- PRETTY PRINT ---");
         PrettyPrintVisitor pp = new PrettyPrintVisitor();
         root.accept(pp);
-        System.out.println(pp.getOutput());
+        System.out.print(pp.getOutput());
+    }
 
+    // ------------------------------------------------------------
+    // Cost Visitor
+    // ------------------------------------------------------------
+    private static void runCostVisitor(Step root) {
         System.out.println("--- COST VISITOR ---");
-        CostVisitor cost = new CostVisitor();
-        root.accept(cost);
-        System.out.println("Total cost: " + cost.getTotalCost());
+        CostVisitor cv = new CostVisitor();
+        root.accept(cv);
+        System.out.println("Total cost: " + cv.getTotalCost());
+    }
 
+    // ------------------------------------------------------------
+    // Validation Visitor
+    // ------------------------------------------------------------
+    private static void runValidationVisitor(Step root) {
         System.out.println("--- VALIDATION VISITOR ---");
-        ValidationVisitor val = new ValidationVisitor();
-        root.accept(val);
-        System.out.println("Errors: " + val.getErrors());
+        ValidationVisitor vv = new ValidationVisitor();
+        root.accept(vv);
+        System.out.println("Errors: " + vv.getErrors());
+    }
 
+    // ------------------------------------------------------------
+    // DFS Iterator
+    // ------------------------------------------------------------
+    private static void runDFS(Step root) {
         System.out.println("--- DFS ITERATOR ---");
-        DepthFirstIterator dfs = new DepthFirstIterator(root);
-        while (dfs.hasNext()) {
-            System.out.println(dfs.next().getName());
-        }
-
-        System.out.println("--- LINEAR ITERATOR ---");
-        LinearIterator lin = new LinearIterator(root);
-        while (lin.hasNext()) {
-            System.out.println(lin.next().getName());
+        DepthFirstIterator it = new DepthFirstIterator(root);
+        while (it.hasNext()) {
+            System.out.println(it.next().getName());
         }
     }
 
-    // ---------------------------
-    // JSON → Map Conversion
-    // ---------------------------
+    // ------------------------------------------------------------
+    // Linear Iterator
+    // ------------------------------------------------------------
+    private static void runLinear(Step root) {
+        System.out.println("--- LINEAR ITERATOR ---");
+        LinearIterator it = new LinearIterator(root);
+        while (it.hasNext()) {
+            System.out.println(it.next().getName());
+        }
+    }
 
-    private static Map<String, Object> loadJsonAsMap(String filename) throws IOException {
-        String content = Files.readString(Paths.get(filename));
+    // ------------------------------------------------------------
+    // JSON Loading Helpers
+    // ------------------------------------------------------------
+    private static Map<String, Object> loadJsonAsMap(String path) throws IOException {
+        String content = new String(Files.readAllBytes(Paths.get(path)));
         JSONObject json = new JSONObject(content);
         return jsonToMap(json);
     }
 
     private static Map<String, Object> jsonToMap(JSONObject obj) {
         Map<String, Object> map = new HashMap<>();
-
         for (String key : obj.keySet()) {
             Object value = obj.get(key);
-
             if (value instanceof JSONObject) {
                 map.put(key, jsonToMap((JSONObject) value));
             } else if (value instanceof JSONArray) {
@@ -90,16 +114,13 @@ public class Main {
                 map.put(key, value);
             }
         }
-
         return map;
     }
 
     private static List<Object> jsonToList(JSONArray arr) {
         List<Object> list = new ArrayList<>();
-
         for (int i = 0; i < arr.length(); i++) {
             Object value = arr.get(i);
-
             if (value instanceof JSONObject) {
                 list.add(jsonToMap((JSONObject) value));
             } else if (value instanceof JSONArray) {
@@ -108,7 +129,6 @@ public class Main {
                 list.add(value);
             }
         }
-
         return list;
     }
 }
